--- a/index.html
+++ b/index.html
@@ -3,11 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <title>Portfolio</title>
 </head>
 <body>
-<!-- instructions in JavaScript block -->
+<nav>
+    <ul>
+        <li><h1><a href="index.html"><span class="fas fa-code" aria-hidden="true"></span>
+            <span>Ebrima Sonko</span></a></h1></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+        <li><a href="#">Projects</a></li>
+        <li><a href="#"><span class="fab fa-linkedin" aria-hidden="true"></span><span class="sr-only">LinkedIn</span></a></li>
+        <li><a href="#"><span class="fab fa-github" aria-hidden="true"></span><span class="sr-only">Github</span></a></li>
+        <li><a href="#">Resume</a></li>
+    </ul>
+</nav>
+
 <section id="intro">
     <p class="name">Hi, my name is <span>ebrima Sonko</span></p>
     <h2>I teach the web.</h2>
@@ -17,7 +30,7 @@
 
 <section class="contact-section">
     <h2>Contact me</h2>
-    <p>i'am always intrested in hearing abouy new teaching opportunities, writting curricula, or instructional work.</p>
+    <p>i'am always interested in hearing about new teaching opportunities, writting curricula, or instructional work.</p>
     <p> <a href="#" class="btn-primary">Email me</a>
     </p>
 </section>
