--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <li><a href="#">Projects</a></li>
         <li><a href="#"><span class="fab fa-linkedin" aria-hidden="true"></span><span class="sr-only">LinkedIn</span></a></li>
         <li><a href="#"><span class="fab fa-github" aria-hidden="true"></span><span class="sr-only">Github</span></a></li>
-        <li><a href="#">Resume</a></li>
+        <li><a href="#" class="button">Resume</a></li>
     </ul>
 </nav>
 
@@ -34,5 +34,20 @@
     <p> <a href="#" class="btn-primary">Email me</a>
     </p>
 </section>
+<footer>
+    <h2>Ebrima sonko &middot; Web developer</h2>
+    <ul>
+        <li><a href="#"><span class="fab fa-linkedin" aria-hidden="true"></span><span class="sr-only">LinkedIn</span> </a></li>
+        <li><a href="#"><span class="fab fa-github" aria-hidden="true"></span><span class="sr-only">Github</span> </a></li>
+        <li><a href="#"><span class="fas fa-envelope-square" aria-hidden="true"></span><span class="sr-only">Email</span> </a></li>
+    </ul>
+    <p>&copy; 2022 Ebrima Sonko. All rights reserved.</p>
+</footer>
+
+
+
+
+
+
 </body>
 </html>
