--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
     <link href="style.css" rel="stylesheet">
     <title>Portfolio</title>
@@ -11,8 +14,9 @@
 <nav>
     <ul>
         <li><h1><a href="index.html"><span class="fas fa-code" aria-hidden="true"></span>
-            <span>Ebrima Sonko</span></a></h1></li>
-        <li><a href="#">About</a></li>
+            <span>Ebrima Sonko</span></a></h1>
+        </li>
+        <li><a href="about.html">About</a></li>
         <li><a href="#">Contact</a></li>
         <li><a href="#">Projects</a></li>
         <li><a href="#"><span class="fab fa-linkedin" aria-hidden="true"></span><span class="sr-only">LinkedIn</span></a></li>
@@ -27,13 +31,85 @@
     <p>I'm an educator specializing in HTML, CSS, user experience, and no-code technologies.</p>
     <p>Currently, I'm creating courses for <a href="https://frontendmasters.com/teachers/jen-kramer/" target="_blank">Frontend Masters</a>.</p>
 </section>
-
-<section class="contact-section">
-    <h2>Contact me</h2>
-    <p>i'am always interested in hearing about new teaching opportunities, writting curricula, or instructional work.</p>
-    <p> <a href="#" class="btn-primary">Email me</a>
-    </p>
-</section>
+<div class="gradient"></div>
+<div class="section-blue">
+    <section id="projects">
+        <h2>Projects I'm proud of</h2>
+        <article>
+            <div class="text">
+                <h4>Latest Project</h4>
+                <h3>Wall of Wonder</h3>
+                <p class="blackbox">
+                    Description of the project. This should be fairly concise while
+                    also describing the key components that you developed or worked
+                    on. It can be as long as you need it to be but should at least be
+                    a few sentences long. Be sure to include specific links anywhere
+                    in the description. A link looks like
+                    <a href="https://frontendmasters.github.io/grid-flexbox-v2/"
+                    >this</a
+                    >, and multiple links look <a href="#">like this</a> and
+                    <a href="#">like this</a>.
+                </p>
+                <h4>Technologies used include:</h4>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>SVG</li>
+                </ul>
+            </div>
+            <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-1.png" alt="Screenshot of the Wall of Wonder." />
+        </article>
+        <article class="reverse">
+            <div class="text">
+                <h4>Bootcamp Project</h4>
+                <h3>Feed-A-Star-Mole Game</h3>
+                <p class="blackbox">
+                    Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere
+                    in the description. A link looks like
+                    <a href="https://frontendmasters.github.io/bootcamp/mole">this</a
+                    >, and multiple links look <a href="#">like this</a> and
+                    <a href="#">like this</a>.
+                </p>
+                <h4>Technologies used include:</h4>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JavaScript</li>
+                </ul>
+            </div>
+            <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-5.png" alt="Screenshot of the Frontend Masters Bootcamp." />
+        </article>
+        <article>
+            <div class="text">
+                <h4>Photography Project</h4>
+                <h3>Wall of Wonder Collection</h3>
+                <p class="blackbox">
+                    Description of the project. This should be fairly concise while also describing the key components that you developed or worked on. It can be as long as you need it to be but should at least be a few sentences long. Be sure to include specific links anywhere
+                    in the description. A link looks like
+                    <a href="https://frontendmasters.github.io/grid-flexbox-v2/grid-figure-figcaption">this</a
+                    >, and multiple links look <a href="#">like this</a> and
+                    <a href="#">like this</a>.
+                </p>
+                <h4>Technologies used include:</h4>
+                <ul>
+                    <li>HTML</li>
+                    <li>CSS Grid</li>
+                </ul>
+            </div>
+            <img src="https://assets.codepen.io/296057/fem-gettingstartedcss-ch5-4.png" alt="Screenshot of the Wall of Wonder Collections." />
+        </article>
+    </section>
+</div>
+<div class="gradient"></div>
+<div class="section-plum">
+    <section class="contact-section">
+        <h2>Contact me</h2>
+        <p>i'am always interested in hearing about new teaching opportunities, writting curricula, or instructional work.</p>
+        <p> <a href="#" class="button">Email me</a>
+        </p>
+    </section>
+</div>
+<div class="gradient"></div>
 <footer>
     <h2>Ebrima sonko &middot; Web developer</h2>
     <ul>
