--- a/about.html
+++ b/about.html
@@ -39,10 +39,10 @@
                     in the description. A link looks like
                 </p>
             </div>
-            <img src="" alt="Screenshot of the Wall of Wonder." />
+            <img src="img/IMG_0324%202.JPG" alt="Screenshot of the Wall of Wonder." />
         </article>
+    </section>
 </section>
-
 <footer>
     <h2>Ebrima sonko &middot; Web developer</h2>
     <ul>
